Bug 115994 - Grey area instead of settings for "Tools - Options - Language Settings -English sentence checking" and " "Tools - Options - Internet - MediaWiki" on master
Summary: Grey area instead of settings for "Tools - Options - Language Settings -Engli...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Options-Dialog
  Show dependency treegraph
 
Reported: 2018-02-24 15:26 UTC by Thomas Hackert
Modified: 2018-03-04 22:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Hackert 2018-02-24 15:26:31 UTC
Description:
Hello @ll,

I have installed LO master and while trying to configure it to my likings, I discovered the following:

1. install LO in parallel, following the instructions from https://wiki.documentfoundation.org/Installing_in_parallel/Linux
2. start your freshly installed LO
3. go to "Tools - Options - Language Settings - English sentence checking"

You will see only a grey area instead of all possible check boxes to enable or disable something.

The applies to "Tools - Options - Internet - MediaWiki" also. You will only see a grey area on the right side without any possiblity to add any wiki ... :(

OS: Debian Testing AMD64
LO: Version: 6.1.0.0.alpha0+
Build ID: 0a46237093c1750ee69ddb6a365098dc1d06b758
CPU threads: 4; OS: Linux 4.14; UI render: default; VCL: kde4; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-02-21_21:56:55
Locale: de-DE (de_DE.UTF-8); Calc: group
java: openjdk version "10-ea" 2018-03-20
OpenJDK Runtime Environment 18.3 (build 10-ea+42)
OpenJDK 64-Bit Server VM 18.3 (build 10-ea+42, mixed mode)

Older versions like

LO: Version: 6.0.2.0.0+
Build-ID: d1a4f50d686054b757320c0ef3f3dc4c724c685c
CPU-Threads: 4; BS: Linux 4.14; UI-Render: Standard; VCL: kde4; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:libreoffice-6-0, Time: 2018-02-22_03:27:32
Gebietsschema: de-DE (de_DE.UTF-8); Calc: group

or

LO: Version: 6.0.2.1
Build-ID: f7f06a8f319e4b62f9bc5095aa112a65d2f3ac89
CPU-Threads: 4; BS: Linux 4.14; UI-Render: Standard; VCL: kde4; 
Gebietsschema: de-DE (de_DE.UTF-8); Calc: group

does not show this error. There you have the possibillity to configure these options.
Sorry for the inconvenience
Thomas.

Steps to Reproduce:
Read the descriptions, please

Actual Results:  
as above

Expected Results:
as above


Reproducible: Always


User Profile Reset: No



Additional Info:
As I use the parallel installation instruction and as such also set the path to a different (new) user profile, I am not sure if moving my user profile again, will make any difference.


User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:59.0) Gecko/20100101 Firefox/59.0
Comment 1 Julien Nabet 2018-02-25 10:09:03 UTC
On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.
Comment 2 Julien Nabet 2018-02-25 10:11:02 UTC
Let's increase importance since it's a regression and corresponds to UI elements quite visible.
Comment 3 Xisco Faulí 2018-02-26 12:58:18 UTC
Regression introduced by:

author	Katarina Behrens <Katarina.Behrens@cib.de>	2018-02-20 10:08:55 +0100
committer	Katarina Behrens <Katarina.Behrens@cib.de>	2018-02-21 13:17:19 +0100
commit 16a3d8f4f010ad9b9413ac4d40ef8fe0f7d633e7 (patch)
tree 10afdf4d824ee5c4ba4b48564aa8a8cea74b10d4
parent 180f2860525fb7ed4892b417b20c3f2f9cbb44e0 (diff)
tdf#115015: make crypto settings better fit allocated space
Oh dear how much do I dislike fixed size dialogs. Everytime they
are enlarged to fit new content (esp. gtk3 is rather space-greedy
there) someone starts to whine the dialog is now too large

Doing what e6d7d7375221 does is not really an option, since there
are some 30+ tabpages to try and test for optimal size here.

Bisected with: bibisect-linux64-6.1

Adding Cc: to Katarina Behrens
Comment 4 Katarina Behrens (Inactive) 2018-02-26 16:15:30 UTC
One only sees this bug if they have either installed or built an extension that supplies its own Tools > Options page .. given how often does this happen, I'd perhaps argue with "high" prio, but hey

Needless to say, I didn't have any (until I was pointed to this bug) :| *sigh* this codebase sometimes drives me up the wall
Comment 5 Thomas Hackert 2018-02-26 17:12:16 UTC
Hello Katarina, *,
(In reply to Katarina Behrens (CIB) from comment #4)
> One only sees this bug if they have either installed or built an extension
> that supplies its own Tools > Options page .. given how often does this
> happen, I'd perhaps argue with "high" prio, but hey

I have neither built nor installed any language apart from the ones which are shipped with LO from our site.

> Needless to say, I didn't have any (until I was pointed to this bug) :|
> *sigh* this codebase sometimes drives me up the wall

I just installed LO's main, de-de language and helppack. Could this be the reason here?
Sorry for the inconvenience
Thomas.
Comment 6 Katarina Behrens (Inactive) 2018-02-27 22:46:39 UTC
> I have neither built nor installed any language apart from the ones which
> are shipped with LO from our site.

TDF builds ship MediaWiki extension-non-extension, so that's that
Comment 7 Xisco Faulí 2018-02-28 09:12:30 UTC
The wiki publisher is not bundled with the bibisect repositories. I used this extension https://extensions.openoffice.org/en/project/sun-wiki-publisher for testing...
Comment 8 Commit Notification 2018-03-01 14:08:12 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2ead0d1ea024ec8771615400d699194b2fc44efe

tdf#115994: Extensions' option pages need fixed pref. size

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Katarina Behrens (Inactive) 2018-03-03 07:44:25 UTC
Let's set this to fixed, shout if it ain't the case
Comment 10 Thomas Lendo 2018-03-04 22:15:40 UTC
Seems be fixed.

Version: 6.1.0.0.alpha0+
Build-ID: e108a31a8fee09c2fa4031e45e45ed73bbdb7c6f
CPU-Threads: 4; BS: Linux 4.13; UI-Render: Standard; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-03-04_00:58:03
Gebietsschema: de-DE (de_DE.UTF-8); Calc: group