tdf#115994: Extensions' option pages need fixed pref. size

as they are fixed size .xdl-based dialogs mostly
But because of tdf#115015 calculate this preferred size as approx.
15 text edits + some padding to make sure crypto settings will fit
the allocated space

Change-Id: If31c4944e0909b281da5e8266ba1d1001b7c5309