cui/source/options/treeopt.cxx
@@ -489,9 +489,16 @@ void OfaTreeOptionsDialog::InitWidgets()
     get(pTreeLB, "pages");
     get(pTabBox, "box");
     Size aSize(pTabBox->LogicToPixel(Size(278, 259), MapMode(MapUnit::MapAppFont)));
-    pTreeLB->set_width_request(pTreeLB->approximate_char_width() * 25);
-    pTreeLB->set_height_request(pTreeLB->GetTextHeight() *  32);
     pTabBox->set_width_request(aSize.Width());
+#if HAVE_FEATURE_GPGME
+    // tdf#115015: make enough space for crypto settings (approx. 15 text edits + padding)
+    pTabBox->set_height_request((Edit::GetMinimumEditSize().Height() + 6) * 15);
+#else
+    pTabBox->set_height_request(aSize.Height() - get_action_area()->get_preferred_size().Height());
+#endif
+    pTreeLB->set_width_request(pTreeLB->approximate_char_width() * 25);
+    pTreeLB->set_height_request(pTabBox->get_height_request());
+
 }
 
 // Ctor() with Frame -----------------------------------------------------
